syntax = "proto3";

package api.email;

import "google/api/annotations.proto";

option go_package = "github.com/panupakm/boutique-go/api/email;email";
option java_multiple_files = true;
option java_package = "api.email";


service Email {
	rpc SendOrderConfirmation(SendOrderConfirmationRequest) returns (Empty) {
		option (google.api.http) = {
			post: "/email/order-confirmation"
			body: "*"
		};
	}
}

message Empty {}

message CartItem {
    string product_id = 1;
    int32  quantity = 2;
}

message Money {
    // The 3-letter currency code defined in ISO 4217.
    string currency_code = 1;

    // The whole units of the amount.
    // For example if `currencyCode` is `"USD"`, then 1 unit is one US dollar.
    int64 units = 2;

    // Number of nano (10^-9) units of the amount.
    // The value must be between -999,999,999 and +999,999,999 inclusive.
    // If `units` is positive, `nanos` must be positive or zero.
    // If `units` is zero, `nanos` can be positive, zero, or negative.
    // If `units` is negative, `nanos` must be negative or zero.
    // For example $-1.75 is represented as `units`=-1 and `nanos`=-750,000,000.
    int32 nanos = 3;
}

message OrderItem {
    CartItem item = 1;
    Money cost = 2;
}

message Address {
    string street_address = 1;
    string city = 2;
    string state = 3;
    string country = 4;
    int32 zip_code = 5;
}

message OrderResult {
    string   order_id = 1;
    string   shipping_tracking_id = 2;
    Money shipping_cost = 3;
    Address  shipping_address = 4;
    repeated OrderItem items = 5;
}

message SendOrderConfirmationRequest {
    string email = 1;
    OrderResult order = 2;
}
